# iitb-email-summarize

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/pull_request_template/: pull_request_template.md
.github/workflows/: backend.yml  frontend.yml  gitleaks.yml
app/: main.py
app/templates/: detail.html  index.html
backend/app/: main.py
backend/deadline_tools/: daemon.py
backend/mail_fetch/: config.py  main.py
backend/notify/: .env.example  main.py
backend/scripts/: check_deadline_function_calling.py  check_mail_fetch.py  evaluate_deadline_function_calling.py  harvest_recent_mail.py  prepare_mail_fixture.py  run_deadline_daemon.py
backend/summarize_mail/: PROMPT.py  config.py  main.py
backend/tests/: test_db_runtime_paths.py  test_deadline_daemon.py  test_offline_api.py
db/: README.md  __init__.py  store.py
db/schemas/: deadline_store.schema.json  summary_store.schema.json
db/seeds/: deadlines.example.json  summaries.example.json
deadline_tools/: __init__.py  function_calling.py
docs/: forge-report-20260427-215000.html  forge-transcript-20260427-215000.md  product-roadmap.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
mail_fetch/: .env.example  config.py  main.py
notify/: main.py
scripts/: evaluate_deadline_function_calling.py  harvest_recent_mail.py
summarize_mail/: PROMPT.py  config.py  main.py
tests/: test_deadline_function_calling.py  test_prepare_mail_fixture.py
(+13 files in other folders)
