[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox-broadcast"
version = "0.1.0"
description = "AI-powered IIT Bombay mail viewer with summaries and deadline extraction"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fastapi",
    "uvicorn",
    "imap-tools",
    "requests",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend", "."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
mypy_path = "backend"
